--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,10 +1,10 @@
 :root {
   --color-background: #f3f3f3;
   --color-background-nav: #2b3d50;
-  --color-bacground-home: #344960;
+  --color-background-home: #344960;
   --color-text-light: #ededed;
   --color-text-title: #ff5555;
-  --color-text-dark: #3d3d3d; 
+  --color-text-dark: #3d3d3d;
 }
 
 * {
@@ -14,7 +14,8 @@
   font-family: sans-serif;
 }
 
-html, body {
+html,
+body {
   background-color: var(--color-background);
 }
 
@@ -25,4 +26,15 @@ a {
 
 a:hover {
   opacity: 0.8;
+}
+
+.container {
+  width: 90%;
+}
+
+main {
+  width: 100%;
+  height: calc(100vh - 120px);
+  display: flex;
+  flex-direction: column;
 }
